test/validation/sys-func/test-fillchar-rval/p.pas
program test_fillchar_rval;
const a = 7;
begin
    fillchar(a, sizeof(a), 0);
end.
