test/error/sys-func/test-read-rval/p.pas
program test_read_rval;
const a = 7;
begin
    read(a);
end.
